--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <h3 class="mb-0">世新大學</h3>
               <div class="subheading mb-3">資訊傳播學系</div>
               <div>大學一年級</div>
-              <p>應該能畢業吧......</p>
+              <p>應該能畢業吧.....</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2017</span>
