--- a/index.html
+++ b/index.html
@@ -164,37 +164,36 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">教育</h2>
+          <h2 class="mb-5">學歷</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">世新大學</h3>
-              <div class="subheading mb-3">資訊傳播學系</div>
-              <div>大學一年級</div>
-              <p>應該能畢業吧....</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2017</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">嶺東高級中學</h3>
-              <div class="subheading mb-3">高中部 普通科</div>
-              <p></p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2014 - June 2017</span>
-            </div>
-          </div>
+         <div class="timeline">
+      <div class="timeline-block timeline-left">
+        <div class="timeline-content">
+          <h3>Sept. 2015 ~ Jun. 2017</h3>
+        <p><span class="text-primary">私立嶺東高中</span></p>
+        </div>
+      </div>
+      </div>
+      <div class="timeline-block timeline-right">
+        <div class="timeline-content">
+          <h3>Sept. 2013 ~ Jun. 2015</h3>
+        <p><span class="text-primary">私立嶺東高中國中部</span></p>
+        </div>
+      </div>
+      <div class="timeline-block timeline-left">
+        <div class="timeline-content">
+          <h3>Sept. 1985 ~ Jun. 1989</h3>
+        <p><span class="text-primary">大仁國小</span></p>
+        </div>
+      </div>
+      </div> 
 
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">專業技能</h2>
+          <h2 class="mb-5"><span class="text-primary">專業技能</span></h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
