--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
           </li>
            <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#dream">我的夢想</a>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#life">我的生活</a>
           </li>
         </ul>
       </div>
@@ -117,11 +119,22 @@
         <div class="my-auto">
           <h2 class="mb-5">經驗</h2>
 
+<div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">IMPACT Taipei Present : Impact 002 主秀DJ</h3>
+              <div class="subheading mb-3">Revolver</div>
+              <p>受邀參加新興地下音樂廠牌IMPACT Taipei於Revolver舉辦之活動，擔任當天主秀DJ與雙人組合The Uppitys同台演出。</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">May 4</span>
+            </div>
+          </div>
+
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">106世新大學傳播技能展 資傳一甲 導演</h3>
               <div class="subheading mb-3">世新大學</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <p>擔任106世新大學傳播技能展資傳一甲 [痂] 導演</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2018 - Present</span>
@@ -419,12 +432,19 @@
 </section>
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="dream"> <div class="my-auto"> <h2 class="mb-5"><span class="text-primary">我的夢想</span></h2>   
 <p>希望成為一名職業影像工作者和DJ，並擔任電子音樂的推廣者</p>
- 
+ </div>
+</div>
+    </div>
+</div>
+</div>
+</section>
+<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="life"> <div class="my-auto"> <h2 class="mb-5"><span class="text-primary">我的生活</span></h2>   
+<p>平時是一名大學生，利用課餘時間接觸DJ與編曲</p>
 
 
 </body>
 </html>
-
+ 
 
     </div>
 
