--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="QUINCY LO">
     <meta name="Quincy Lo" content="">
 
-    <title>TURQEY-The Best DJ In TAIWAN</title>
+    <title>TURQEY</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -248,29 +248,14 @@
             </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
-        </div>
+         
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <h2 class="mb-5">興趣</h2>
+          <p>平時喜歡到處吃吃喝喝，和音樂上的朋友一起討論DJ及音樂製作的技巧。</p>
+          <p class="mb-0"></p>
         </div>
       </section>
 
@@ -439,7 +424,8 @@
 </div>
 </section>
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="life"> <div class="my-auto"> <h2 class="mb-5"><span class="text-primary">我的生活</span></h2>   
-<p>平時是一名大學生，利用課餘時間接觸DJ與編曲</p>
+<p>平時是一名大學生，在外參與許多影像方面的製作且累積不少作品，利用課餘時間接觸DJ與編曲並參與活動演出，目前為MINI ROOM主理人，以推廣浩室音樂為目的舉辦活動。</p>
+<img src="img/IMG_6244.jpg" height="30%" width="30%">
 
 
 </body>
