--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
 </section>
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="dream"> <div class="my-auto"> <h2 class="mb-5"><span class="text-primary">我的夢想</span></h2>   
 <p>希望成為一名職業影像工作者和DJ，並擔任電子音樂的推廣者</p>
+<img src="img/IMG_1163.JPG" height="30%" width="30%">
  </div>
 </div>
     </div>
@@ -425,7 +426,8 @@
 </section>
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="life"> <div class="my-auto"> <h2 class="mb-5"><span class="text-primary">我的生活</span></h2>   
 <p>平時是一名大學生，在外參與許多影像方面的製作且累積不少作品，利用課餘時間接觸DJ與編曲並參與活動演出，目前為MINI ROOM主理人，以推廣浩室音樂為目的舉辦活動。</p>
-<img src="img/IMG_6244.jpg" height="30%" width="30%">
+<img src="img/IMG_6244.JPG" height="30%" width="30%">
+<img src="img/IMG_5631.JPG" height="30%" width="30%">
 
 
 </body>
