--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">嗨我是火雞</span>
+        <span class="d-block d-lg-none"><a href="https://quincy40117.github.io/i-3ICS/">資訊傳播學系系網站連結</a></span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -62,12 +62,6 @@
             <a class="nav-link js-scroll-trigger" href="#dream">我的夢想</a>
             <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#life">我的生活</a>
-<<<<<<< HEAD
-          </li>
-            <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#ics">資傳系網</a>
-=======
->>>>>>> 8b98115d3d5101ec8ceb087bc1c0525f20a364bf
           </li>
         </ul>
       </div>
@@ -420,13 +414,6 @@
 <img src="img/IMG_6244.JPG" height="30%" width="30%">
 <img src="img/IMG_5631.JPG" height="30%" width="30%">
 
-</section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="ics">
-        <div class="my-auto">
-          <h2 class="mb-5">資傳系網</h2>
-          <p><a href="https://quincy40117.github.io/i-3ICS/">資傳系網連結</a></p>
-        </div>
 
 
 </body>
