--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none"><a href="https://quincy40117.github.io/i-3ICS/">資訊傳播學系系網站連結</a></span>
+        <span class="d-block d-lg-none">嗨我是火雞</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -281,6 +281,11 @@
       </tr>
     </thead>
     <tbody>
+      <tr>
+        <td>github</td>
+        <td><a href="https://quincy40117.github.io/i-3ICS/">
+羅昱棋</a></td>
+        <td><a href="https://quincy40117.github.io/i-3ICS/">SHU ICS資傳系系網站</a></td>
       <tr>
         <td>Facebook</td>
         <td><a href="https://www.facebook.com/profile.php?id=100000271068844">
